--- a/index.html
+++ b/index.html
@@ -5,34 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="We Specialize in Customer Service. Our clients enjoy concierge like service from the time they take delivery of their luxury or Exotic car. Our representatives are experienced with features of these unique cars and aquaint each renter with the amazing features, and special options offered by the car.">
+    <meta name="keywords" content="Luxury, Cars,Book Now">
+    <meta name="author" content="Mohssine elattari">
+    <link rel="icon" href="../images/icons/baby-car.png" type="image/icon type">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <!--FONT AWESOME-->
-    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Document</title>
 
-    <script>
-        $(document).ready(function() {
-            $('.btn').click(function() {
-                $('.nav_links').toggleClass("show");
-                $('ul li').toggleClass("hide");
 
-            });
-        });
-    </script>
 </head>
 
 <body>
     <!-- header -->
+    <div class="mVideo">
+        <video autoplay muted loop>
+                <source src="media/background_video.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+            </video>
+    </div>
     <header>
-        <div class="mVideo">
-            <video autoplay muted loop>
-                    <source src="media/background_video.mp4" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
-        </div>
+
         <nav>
             <ul>
                 <li class="logo">Luxury<span>Cars</span></li>
@@ -154,6 +152,7 @@
     </footer>
 
     <!-- end footer -->
+    <script src="../scripts/script.js"></script>
 </body>
 
 
