--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -2,18 +2,19 @@
 <html lang="en">
 
 <head>
+
+    <title>Gallery</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="We have prepared a whole fleet for you, so book now and live the adventure">
+    <meta name="keywords" content="Luxury, Cars,Book Now">
+    <meta name="author" content="Mohssine elattari">
+    <link rel="icon" href="../images/icons/baby-car.png" type="image/icon type">
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-
-
-    <!--FONT AWESOME-->
-    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Gallery</title>
 </head>
 
 <body>
@@ -21,6 +22,9 @@
     <header>
         <div class="mbackground">
             <img src="../images/redcharlie-mugDbuNnbd0-unsplash.jpg" alt="ferrari f12berlinetta ferrada wheels">
+        </div>
+        <div class="header-title">
+            <h1 class="title_booking">Rental Car Categories</h1>
         </div>
         <nav>
             <ul>
@@ -129,6 +133,5 @@
     <!-- end footer -->
     <script src="../scripts/script.js"></script>
 </body>
-
 
 </html>
