--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,18 +2,20 @@
 <html lang="en">
 
 <head>
+
+    <title>Contact</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Feel free to Contact us">
+    <meta name="keywords" content="Luxury, Cars,contact">
+    <meta name="author" content="Mohssine elattari">
+    <link rel="icon" href="../images/icons/baby-car.png" type="image/icon type">
+
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-
-
-    <!--FONT AWESOME-->
-    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Contact</title>
 </head>
 
 <body>
@@ -51,7 +53,7 @@
                     <input type="text" class="cCity" id="cCity" placeholder="City">
                     <textarea placeholder="Your message" class="cMessage" id="cMessage" aria-invalid="false"></textarea>
                 </form>
-                <button id="cmyBtn">Send message</button>
+                <button id="cmyBtn">Send</button>
             </div>
             <!-- The Modal -->
             <div id="myModal" class="modal">
@@ -106,6 +108,5 @@
     <!-- end footer -->
     <script src="../scripts/script.js"></script>
 </body>
-
 
 </html>
